--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 					<div class="post__header">
 						<div class="post__profile">
 							<a href="#">
-								<img src="img/profiles/baby-shark/baby-shark_profile.jpg" class="post__user-image" alt="Baby Shark">
+								<img src="img/profiles/rat-fink/rat-fink_profile.png" class="post__user-image" alt="Baby Shark">
 							</a>
-							<a href="#" class="post__user-name">Baby Shark</a>
+							<a href="#" class="post__user-name">Rat Fink</a>
 						</div>
 						<button class="post__options">
 							<i class="fas fa-ellipsis-h"></i>
@@ -181,7 +181,7 @@
 					</div>
 
 					<div class="post__figure">
-						<img src="img/profiles/baby-shark/baby-shark-1.jpg" class="post__image" alt="Baby Shark">
+						<img src="img/profiles/rat-fink/rat-fink-1.png" class="post__image" alt="Baby Shark">
 					</div>
 
 					<div class="post__controls">
